--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <div class="results__display"></div>
      <script>
-        const url = "http://localhost:8888/clearance/app/";
+        const url = "http://localhost/clearance/app/";
         const form = document.forms["safe"];
         const display = document.getElementsByClassName("results__display")[0];
 
